--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:id="@+id/fl_main_top"
+        android:id="@+id/fl_main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/fl_main_bottom">
