仿微博热搜滑动交互之渐隐及顶部停留效果处理

--- a/app/src/main/res/layout/fragment_shanghai.xml
+++ b/app/src/main/res/layout/fragment_shanghai.xml
@@ -35,10 +35,18 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:text="上海欢迎您"
                     android:textColor="@color/colorAccent" />
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="我是可以停留的"
+            android:textColor="@color/colorAccent" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
