--- a/app/src/main/res/layout/item_shanghai_fragment.xml
+++ b/app/src/main/res/layout/item_shanghai_fragment.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/item_shanghai_iv"
+        android:scaleType="centerCrop"
+        android:src="@drawable/pic_shanghai"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
 
     <TextView
-
         android:id="@+id/item_shanghai_tv"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -15,4 +20,4 @@
         android:text="上海"
         android:textColor="@color/colorAccent" />
 
-</RelativeLayout>
+</LinearLayout>
