ViewPager的高级使用 动态更新，内存优化 懒加载

--- a/app/src/main/res/layout/fragment_hangzhou.xml
+++ b/app/src/main/res/layout/fragment_hangzhou.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+<!--    app:tabIndicatorColor ：指示线的颜色-->
+<!--    app:tabIndicatorHeight ：指示线的高度-->
+<!--    app:tabSelectedTextColor ： tab选中时的字体颜色-->
+<!--    app:tabMode="scrollable" ： 默认是fixed，固定的；scrollable：可滚动的-->
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tl_tablayout"
+        app:tabIndicatorColor="@color/colorPrimary"
+        app:tabIndicatorHeight="2dp"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabMode="fixed"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="杭州" />
+        android:layout_height="wrap_content">
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vp_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
