自定义View实现

--- a/app/src/main/res/layout/fragment_zhihu.xml
+++ b/app/src/main/res/layout/fragment_zhihu.xml
@@ -14,7 +14,9 @@
             android:id="@+id/zhihu_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:layout_scrollFlags="scroll|enterAlways"></androidx.appcompat.widget.Toolbar>
+            app:layout_scrollFlags="scroll|enterAlways">
+
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
 
