--- a/app/src/main/res/layout/fragment_jike.xml
+++ b/app/src/main/res/layout/fragment_jike.xml
@@ -7,6 +7,6 @@
 
     <com.yoyozhangh.github.todayinfomation.main.fragment.hangzhou.jike.LikeClickView
         app:is_like="true"
-        android:layout_width="100dp"
-        android:layout_height="200dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
