--- a/app/src/main/res/drawable/mei_tuan_loading.xml
+++ b/app/src/main/res/drawable/mei_tuan_loading.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android" android:oneshot="true">
-<item android:drawable="@drawable/ic_messages_like_selected" android:duration="100"/>
-<item android:drawable="@drawable/ic_messages_like_unselected" android:duration="100"/>
-<item android:drawable="@drawable/ic_messages_like_selected_shining" android:duration="100"/>
-<item android:drawable="@drawable/ic_messages_like_selected" android:duration="100"/>
-<item android:drawable="@drawable/ic_messages_like_selected" android:duration="100"/>
+    <item android:duration="100" android:drawable="@drawable/refreshing_image_frame_01"/>
+    <item android:duration="100" android:drawable="@drawable/refreshing_image_frame_02"/>
+    <item android:duration="100" android:drawable="@drawable/refreshing_image_frame_03"/>
+    <item android:duration="100" android:drawable="@drawable/refreshing_image_frame_05"/>
+    <item android:duration="100" android:drawable="@drawable/refreshing_image_frame_06"/>
+    <item android:duration="100" android:drawable="@drawable/refreshing_image_frame_07"/>
 </animation-list>
