--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.yoyozhangh.github.todayinfomation.splash.FullScreenVideoView
         android:id="@+id/vv_play"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/skip"
-        android:layout_width="90dp"
+        <include layout="@layout/include_tv_tiaoguo" />
+
+  <!--  <ViewStub
+        android:id="@+id/splash_vs"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/shape_splash"
-        android:layout_marginRight="50dp"
-        android:layout_gravity="right"
-        android:gravity="center"
-        android:text="跳过"
-        android:textColor="@color/colorAccent" />
-</FrameLayout>
+        android:layout="@layout/include_tv_tiaoguo" />-->
+</merge>
