异常处理及日志文件系统写入本地cache文件

--- a/app/src/main/res/layout/activity_shanghai_detail.xml
+++ b/app/src/main/res/layout/activity_shanghai_detail.xml
@@ -11,4 +11,11 @@
         android:src="@drawable/pic_shanghai"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
+
+    <TextView
+        android:text="子线程崩溃"
+        android:id="@+id/tv_crash"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 </LinearLayout>
