MediaPlayer 及 SurfaceView 简单介绍

--- a/app/src/main/res/layout/activity_shanghai_detail.xml
+++ b/app/src/main/res/layout/activity_shanghai_detail.xml
@@ -18,4 +18,9 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="100dp"/>
+
+    <android.opengl.GLSurfaceView
+        android:id="@+id/GLSurfaceView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"/>
 </LinearLayout>
