多进程通讯：使用系统四大组件之一广播分发机制

--- a/app/src/main/res/layout/fragment_beijing.xml
+++ b/app/src/main/res/layout/fragment_beijing.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <Button
+        android:id="@+id/bt_play"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="北京" />
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:text="去上海旅游" />
 </LinearLayout>
