--- a/app/src/main/res/layout/fragment_beijing.xml
+++ b/app/src/main/res/layout/fragment_beijing.xml
@@ -10,4 +10,11 @@
         android:layout_height="200dp"
         android:layout_gravity="center"
         android:text="去上海旅游" />
+
+    <Button
+        android:id="@+id/bt_permision"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:text="6.0权限申请" />
 </LinearLayout>
